--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ main {
 .indented-heading {
   margin-bottom: 1em;
   background-color: hsl(40deg 100% 50%);
-  max-width: max-content;
+  width: fit-content;
   padding: 0.5em 1em;
   margin-top: -0.5em;
   margin-left: -1em;
