--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
 * {
   box-sizing: border-box;
   font-family: "Lato", sans-serif;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
 }
 
 html,
 body {
-  min-height: 100vh;
-  line-height: 1.5;
+  /* min-height: 100vh;
+  line-height: 1.5; */
+  margin: 0;
+  padding: 0;
 }
 
 /* Add styles here! */
 
-header {
+/* header {
   padding-top: 5em;
   padding-bottom: 3.5em;
   border-bottom: 10px solid hsl(0deg 0% 20%);
@@ -70,6 +72,64 @@ main {
 
 .card p {
   margin-bottom: 1.5em;
+}
+
+.card p:last-child {
+  margin-bottom: 0;
+} */
+
+h1,
+h2,
+h3 {
+  margin: 0;
+  font-size: 2rem;
+}
+
+p {
+  font-size: 1.3rem;
+  line-height: 1.5;
+}
+
+.max-width-wrapper {
+  max-width: 770px;
+  margin: 0 auto;
+  padding: 0 32px;
+}
+
+.intro-chunk {
+  padding: 96px 0 48px;
+  max-width: 400px;
+}
+
+.intro-chunk strong {
+  color: hsl(160deg 100% 30%);
+}
+
+.intro-chunk .title {
+  margin-bottom: 32px;
+}
+
+main {
+  background-color: hsl(0deg 0% 60%);
+  padding: 96px 0;
+  border-top: 8px solid hsl(0deg 0% 40%);
+}
+
+.card {
+  background-color: white;
+  padding: 32px;
+  margin-left: -32px;
+  margin-right: -32px;
+  border-bottom: 8px solid hsl(0deg 0% 40%);
+}
+
+.indented-heading {
+  background-color: hsl(45deg 100% 50%);
+  margin-left: -50px;
+  margin-top: -24px;
+  padding: 16px 50px;
+  width: fit-content;
+  border-bottom: 8px solid hsl(45deg 100% 40%);
 }
 
 .card p:last-child {
